# agent-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW_2026-07-06.md  Cargo.toml  EVOLUTION.md  README.md  README_CN.md  agent.toml  agent.toml.example  harness.db
.githooks/: pre-push
.github/: copilot-instructions.md
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
docs/: MEMORIA_INTEL_HY3_EXEC.md  OPTIMIZATION_BAILONGMA_ABSORPTION.md  OPTIMIZATION_GROK_BUILD_ABSORPTION.md  OPTIMIZATION_OPENCLAW_ABSORPTION.md  OPTIMIZATION_PLAN_2026-07-11.md  SHELL_ENGINE_BOUNDARY.md  hy3-1.3-roadmap.md  hy3-1.3-roundtable-2026-07-22.md  qclaw_a2a_bridge.md
docs/decisions/: ADR-002-compositional-skill-routing.md  ADR-003-unified-auth-localhost.md  ADR-004-checkpoint-control-plane.md  ADR-005-tracing-observability.md  (+9 more)
eval/: cases.json
scripts/: e2e_collab.py
src/: agent.rs  approval.rs  audit.rs  boot_lifecycle.rs  boundary.rs  chat.html  checkpoint.rs  checkpoint_recovery.rs  code_evolve.rs  composer.rs  degrade.rs  evolution_audit.rs  features.rs  file_checkpoint.rs  harness.rs  lats.rs  lib.rs  llm.rs  main.rs  mcp_client.rs  memory_evolve.rs  memory_extract.rs  meta_evolve.rs  metrics.rs  multiagent.rs  namespace.rs  quota.rs  resources.rs  runtime.rs  sandbox.rs  scheduler.rs  self_evolution.rs  session.rs  skill_library.rs  text_signals.rs  ttc.rs
temp_run/: start.bat  start.ps1
tests/: eval.rs  eval_bon.rs  eval_lats.rs  eval_ttc.rs  eval_verifier.rs
(+12 files in other folders)
