[package]
name = "agent_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_core"
path = "src/lib.rs"

[[bin]]
name = "agent-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
toml = "0.8"
open = "5"
wry = "0.49"
tao = "0.31"
